rest/auth/2-dep-rest-insec.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubis-rest-insec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-rest-insec
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: kubis-rest-insec
        version: v0-3
    spec:
      containers:
      - name: kubis-rest
        image: "docker-registry.default.svc:5000/kubis/kubis-rest:0.3.5"
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: kubis-rest-insec
  lables:
    app: kubis-rest-insec
spec:
  selector:
    app: kubis-rest-ins
  ports:
  - name: http
    port: 80
    targetPort: 8080
