rest/auth/3-dep-gw-sec.yaml
kind: Service
apiVersion: v1
metadata:
  name: kubis-gateway
  lables:
    app: kubis-gw
spec:
  selector:
    app: kubis-gw
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kubis-gateway
spec:
  host: kubis-gateway
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: 0-1
    labels:
      version: 0-1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubis-gateway
spec:
  hosts:
    - kubis-gateway
  http:
  - route:
    - destination:
        host: kubis-gateway
        subset: 0-1
---
kind: Deployment
metadata:
  name: kubis-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubis-gw
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: kubis-gw
        version: v0-1
    spec:
      containers:
      - name: kubis-gw
        image: "docker-registry.default.svc:5000/kubis/kubis-gw:0.2"
        ports:
        - containerPort: 8080
